<resources>
     <string name="app_name">Auth_ui</string>
     <string name="sign_in">Sign In</string>
     <string name="please_login_to_your_account">Please login to your account</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="sign_up">Sign Up</string>
     <string name="don_t_have_an_account">Don\'t Have an Account?</string>
     <string name="sign_in_with_google">Sign In with Google</string>
     <string name="todo">TODO</string>
     <string name="or">OR</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="search_items_here">Search Items here..</string>
     <string name="_20_discount">20% Discount</string>
</resources>